# galenus_cts

./: .gitignore  README.md  build.php  editions.exs  main.py  pyproject.toml  toc.html  unhandled_elements.json
.github/workflows/: deploy.yml
data/: tlg0057 - Raccourci.lnk
data/tlg0057/tlg001/: tlg0057.tlg001.1st1K-grc1.xml  tlg0057.tlg001.1st1K-grc2.xml  tlg0057.tlg001.1st1K-grc2.xml.bak  tlg0057.tlg001.verbatim-lat1.xml  tlg0057.tlg001.verbatim-lat1.xml.bak
data/tlg0057/tlg002/: tlg0057.tlg002.1st1K-grc1.xml  tlg0057.tlg002.1st1K-grc1.xml.bak  tlg0057.tlg002.verbatim-lat1.xml  tlg0057.tlg002.verbatim-lat1.xml.bak
data/tlg0057/tlg003/: tlg0057.tlg003.1st1K-grc1.xml  tlg0057.tlg003.1st1K-grc1.xml.bak  tlg0057.tlg003.verbatim-lat1.xml  tlg0057.tlg003.verbatim-lat1.xml.bak
data/tlg0057/tlg004/: tlg0057.tlg004.1st1K-grc1.xml  tlg0057.tlg004.1st1K-grc1.xml.bak  tlg0057.tlg004.verbatim-lat1.xml  tlg0057.tlg004.verbatim-lat1.xml.bak
data/tlg0057/tlg006/: tlg0057.tlg006.1st1K-grc1.xml  tlg0057.tlg006.1st1K-grc1.xml.bak  tlg0057.tlg006.verbatim-lat1.xml  tlg0057.tlg006.verbatim-lat1.xml.bak
data/tlg0057/tlg007/: tlg0057.tlg007.1st1K-grc1.xml  tlg0057.tlg007.verbatim-lat1.xml  (+1 more)
src/galenus_site/: app.py  build.py  build_search_index.py  reading.py  zotero.py
tools/: Build.php  cts_divid.xsl  galenus_lbno.xsl  galenus_lining.py  galenus_lining.xsl  galenus_miles.xsl  galenus_numsect.xsl  galenus_toc.xsl  galenus_verbatim.py  gv_document.py  gv_lemmatizer.py  gv_sax_parser.py  move_pbs.py  n_attributes_from_labels.py  nlp.py  tei_parser.py
(+535 files in other folders)
