[project]
name = "galenus-cts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "lxml>=6.0.0",
    "lxml-stubs>=0.5.1",
    "pip==22.3.1",
    "pyzotero>=1.6.11",
    "spacy==3.7.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "tqdm>=4.67.1",
]
