[project]
name = "galenus-cts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.0",
    "lxml-stubs>=0.5.1",
    "pyzotero>=1.6.11",
    "stanza>=1.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
kodon-py = { path = "../../../ajmc/kodon-py" }

[project.scripts]
galenus = "galenus_site.build:main"
galenus-dev = "galenus_site.app:main"
galenus-index = "galenus_site.build_search_index:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/galenus_site"]